allow councillors to update their profiles
